# m-conf

./: .gitignore  LICENSE  README.md  pyproject.toml
src/m_conf/: __init__.py  assignment_mode.py  config.py  context.py  dict.py  error.py  parser.py
tests/: __init__.py  test_assignment_mode.py  test_config.py  test_context.py  test_dict.py  test_parser.py
tests/configs/invalid/: 001.cfg
tests/configs/invalid/002/: 002.cfg
tests/configs/valid/: 001.cfg
tests/configs/valid/002/: 002.cfg
