[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "m-conf"
version = "0.1.1"
description = "Mergeable configuration"
readme = "README.md"
license = "MIT"
authors = [{ name = "Leandro Oliveira" }]
requires-python = ">=3.11"
dependencies = []

[project.urls]
Homepage = "https://github.com/ljbo82/m-conf"
Repository = "https://github.com/ljbo82/m-conf"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "build",
    "twine",
    "pytest>=7.0",
    "pytest-cov"
]

[tool.pytest]
addopts = []
testpaths = ["tests"]
pythonpath = ["src"]
